@@ -45,6 +45,7 @@ Version 1.4.11 - SVN
   - Composition restoration functionality now correctly restores attachments.
   - Added smtp_auth hook.
   - Change default Selection List Style to Indented.
+  - Added "preselected" query argument to mailbox list.
 
 Version 1.4.10a - 10 May 2007
 -----------------------------
